--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,9 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js')
+          navigator.serviceWorker
+            .register('/service-worker.js?v=2', { updateViaCache: 'none' })
+            .then((registration) => registration.update())
             .catch(() => {});
         });
       }
